<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="click"
            type="com.example.sunshine.blooddonation.UtiltyClass" />


    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LoginContainer"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/spalsh">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signIn"
                style="@style/Button"
                android:layout_marginTop="40dp"
                android:background="@drawable/signin_button_ripple"
                android:text="@string/signin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/forgetPasswordQuestion" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phonenum"
                style="@style/EditTextLogin"
                android:paddingStart="@dimen/dim_m"
                android:paddingEnd="@dimen/dim_m"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/phonenumber"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                style="@style/EditTextLogin"
                android:layout_marginTop="@dimen/dim_m"
                android:layout_marginBottom="@dimen/dim_m"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dim_m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phonenum"
                app:layout_constraintVertical_bias="0.025" />

            <CheckBox
                android:id="@+id/rememberCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:paddingBottom="2dp"
                android:buttonTint="@color/cyan"
                android:text="@string/rememberme"
                android:textColor="@color/black"
                android:textColorLink="@color/blue"
                android:textDirection="firstStrongLtr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/forgetPasswordQuestion"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:onClick="@{click::forgetPasswordListner}"
                android:paddingTop="2dp"
                android:text="@string/forgetmessage"
                android:textColor="#000000"
                app:layout_constraintEnd_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUp"
                style="@style/Button"
                android:onClick="@{click::SignUpListener}"
                android:layout_marginTop="18dp"
                android:background="@drawable/signup_button_ripple"
                android:text="@string/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>